Fix backend auth and admin dashboard logic